#954 TkStart token unit test. checkstyle fix